@@ -6,6 +6,7 @@ import pwd
 import re
 import subprocess
 import syslog
+import contextlib
 from ubiquity.parted_server import PartedServer
 
 def is_swap(device):
@@ -22,10 +23,64 @@ def is_swap(device):
             fp.close()
     return swap
 
+_dropped_privileges = 0
+
+def drop_all_privileges():
+    # gconf needs both the UID and effective UID set.
+    global _dropped_privileges
+    if 'SUDO_GID' in os.environ:
+        gid = int(os.environ['SUDO_GID'])
+        os.setregid(gid, gid)
+    if 'SUDO_UID' in os.environ:
+        uid = int(os.environ['SUDO_UID'])
+        os.setreuid(uid, uid)
+        os.environ['HOME'] = pwd.getpwuid(uid).pw_dir
+    _dropped_privileges = None
+
+def drop_privileges():
+    global _dropped_privileges
+    assert _dropped_privileges is not None
+    if _dropped_privileges == 0:
+        if 'SUDO_GID' in os.environ:
+            gid = int(os.environ['SUDO_GID'])
+            os.setegid(gid)
+        if 'SUDO_UID' in os.environ:
+            uid = int(os.environ['SUDO_UID'])
+            os.seteuid(uid)
+    _dropped_privileges += 1
+
+def regain_privileges():
+    global _dropped_privileges
+    assert _dropped_privileges is not None
+    _dropped_privileges -= 1
+    if _dropped_privileges == 0:
+        os.seteuid(0)
+        os.setegid(0)
+
+@contextlib.contextmanager
+def raised_privileges():
+    """As regain_privileges/drop_privileges, but in context manager style."""
+    regain_privileges()
+    try:
+        yield
+    finally:
+        drop_privileges()
+
+def raise_privileges(func):
+    """As raised_privileges, but as a function decorator."""
+    from functools import wraps
+
+    @wraps(func)
+    def helper(*args, **kwargs):
+        with raised_privileges():
+            return func(*args, **kwargs)
+
+    return helper
+
+@raise_privileges
 def grub_options():
     """ Generates a list of suitable targets for grub-installer
         @return empty list or a list of ['/dev/sda1','Ubuntu Hardy 8.04'] """
-    regain_privileges()
     l = []
     oslist = {}
     subp = subprocess.Popen(['os-prober'], stdout=subprocess.PIPE,
@@ -68,13 +123,12 @@ def grub_options():
             elif part[5] in oslist.keys():
                 ostype = oslist[part[5]]
             l.append([part[5], ostype])
-    drop_privileges()
     return l
 
+@raise_privileges
 def find_in_os_prober(device):
     '''Look for the device name in the output of os-prober.
        Returns the friendly name of the device, or the empty string on error.'''
-    regain_privileges()
     try:
         if not find_in_os_prober.called:
             find_in_os_prober.called = True
@@ -99,8 +153,6 @@ def find_in_os_prober(device):
         syslog.syslog(syslog.LOG_ERR, "Error in find_in_os_prober:")
         for line in traceback.format_exc().split('\n'):
             syslog.syslog(syslog.LOG_ERR, line)
-    finally:
-        drop_privileges()
     return unicode('')
 find_in_os_prober.oslist = {}
 find_in_os_prober.called = False
@@ -144,10 +196,9 @@ def execute(*args):
         syslog.syslog(' '.join(log_args))
         return True
 
+@raise_privileges
 def execute_root(*args):
-    regain_privileges()
     execute(*args)
-    drop_privileges()
 
 def format_size(size):
     """Format a partition size."""
@@ -167,40 +218,6 @@ def format_size(size):
         unit = 'TB'
         factor = 1024 * 1024 * 1024 * 1024
     return '%.1f %s' % (float(size) / factor, unit)
-
-_dropped_privileges = 0
-
-def drop_all_privileges():
-    # gconf needs both the UID and effective UID set.
-    global _dropped_privileges
-    if 'SUDO_GID' in os.environ:
-        gid = int(os.environ['SUDO_GID'])
-        os.setregid(gid, gid)
-    if 'SUDO_UID' in os.environ:
-        uid = int(os.environ['SUDO_UID'])
-        os.setreuid(uid, uid)
-        os.environ['HOME'] = pwd.getpwuid(uid).pw_dir
-    _dropped_privileges = None
-
-def drop_privileges():
-    global _dropped_privileges
-    assert _dropped_privileges is not None
-    if _dropped_privileges == 0:
-        if 'SUDO_GID' in os.environ:
-            gid = int(os.environ['SUDO_GID'])
-            os.setegid(gid)
-        if 'SUDO_UID' in os.environ:
-            uid = int(os.environ['SUDO_UID'])
-            os.seteuid(uid)
-    _dropped_privileges += 1
-
-def regain_privileges():
-    global _dropped_privileges
-    assert _dropped_privileges is not None
-    _dropped_privileges -= 1
-    if _dropped_privileges == 0:
-        os.seteuid(0)
-        os.setegid(0)
 
 def debconf_escape(text):
     escaped = text.replace('\\', '\\\\').replace('\n', '\\n')
